--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "spatie/laravel-permission": "^4.0",
         "spatie/laravel-sitemap": "5.7.0",
         "unisharp/laravel-filemanager": "^2.2",
-        "yajra/laravel-datatables-oracle": "~9.0"
+        "yajra/laravel-datatables-oracle": "~9.0",
+        "yajra/laravel-disqus": "^1.2"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
